# c-project

./: Bike.cpp  Bike.h  CMakeLists.txt  Car.cpp  Car.h  Dealer.cpp  Dealer.h  Engine.cpp  Engine.h  Factory.cpp  Factory.h  Motorcycle.cpp  Motorcycle.h  Mvehicle.cpp  Mvehicle.h  Painter.cpp  Painter.h  Vehicle.cpp  Vehicle.h  bike_data.txt  dealer_data.txt  enter_num.cpp  enter_num.h  exceptions.cpp  exceptions.h  exec  main  main.cpp  stdin_all.txt  stdin_b.txt  stdin_fd.txt  temat2.txt
