cmake_minimum_required(VERSION 3.17)

project(ZygmuntMateusz-etap2)

set(CMAKE_CXX_STANDARD 17)

add_executable(ZygmuntMateusz-etap2
        main.cpp
        Vehicle.cpp
        Bike.cpp
        Mvehicle.cpp
        Engine.cpp
        Car.cpp
        Motorcycle.cpp
        Dealer.cpp
        Factory.cpp
        Painter.cpp
        enter_num.cpp
        exceptions.cpp)